--- a/admin/smstest.html
+++ b/admin/smstest.html
@@ -43,8 +43,10 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -52,8 +54,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
-                        class="fa fa-caret-down"></i> </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i>
+                    <i class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -76,8 +78,9 @@
                         <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <li>
@@ -98,7 +101,9 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <!--<li>-->
@@ -117,7 +122,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -129,8 +136,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
@@ -157,56 +165,47 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-10">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <form class="form-horizontal small" role="form">
-
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">手机号</label>
-                                        <div class="col-sm-10">
-                                            <input class="form-control" type="text">
-                                        </div>
+                            <form class="form-horizontal small" role="form">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">手机号</label>
+                                    <div class="col-sm-5">
+                                        <input class="form-control" type="text">
                                     </div>
+                                </div>
 
 
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">选择签名</label>
-                                        <div class="col-sm-10">
-                                            <select class="form-control">
-                                                <option>选择1</option>
-                                                <option>选择2</option>
-                                                <option>选择3</option>
-                                            </select>
-                                        </div>
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">选择签名</label>
+                                    <div class="col-sm-5">
+                                        <select class="form-control">
+                                            <option>选择1</option>
+                                            <option>选择2</option>
+                                            <option>选择3</option>
+                                        </select>
                                     </div>
+                                </div>
 
-                                    <div class="form-group">
-                                        <label class="col-sm-2 control-label">短信预览</label>
-                                        <div class="col-sm-10">
-                                            <div class="well">
-                                                <p class=" form-control-static">你发送的验证码是：1234。sms pai</p>
-                                            </div>
-                                            <a href="#sendtest" class="btn btn-primary btn-sm">发送</a>
-
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">短信预览</label>
+                                    <div class="col-sm-5">
+                                        <div class="well">
+                                            <p class=" form-control-static">你发送的验证码是：1234。sms pai</p>
                                         </div>
-                                    </div>
+                                        <a href="#sendtest" class="btn btn-primary btn-sm">发送</a>
 
-                                </form>
-                            </div>
+                                    </div>
+                                </div>
+
+                            </form>
                         </div>
-                        <!-- /.row (nested) -->
                     </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.row (nested) -->
             </div>
             <!-- /.panel-body -->
 
         </div>
-
 
 
     </div>
