--- a/admin/sys_setting.html
+++ b/admin/sys_setting.html
@@ -47,8 +47,10 @@
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="main.html">SMS Pai</a>
         </div>
@@ -56,8 +58,8 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i> <i
-                        class="fa fa-caret-down"></i> </a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i>
+                    <i class="fa fa-caret-down"></i> </a>
                 <ul class="dropdown-menu dropdown-user">
                     <li><a href="#"><i class="fa fa-user fa-fw"></i> 个人信息</a>
                     </li>
@@ -80,8 +82,9 @@
                         <a href="main.html"><i class="fa  fa-fw"></i> 管理控制台</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa  fa-envelope-o fa-fw"></i> 国内短信
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <li>
@@ -102,7 +105,9 @@
                     </li>
 
                     <li>
-                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-cny fa-fw "></i> 财务
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
 
                             <!--<li>-->
@@ -121,7 +126,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置<span class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-gears fa-fw"></i> 设置
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="sys_setting.html">系统设置</a>
@@ -133,8 +140,9 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享<span
-                                class="glyphicon arrow"></span></a>
+                        <a href="#"><i class="fa fa-share-alt fa-fw"></i> 邀请好友与分享
+                            <span class="glyphicon arrow"></span>
+                        </a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="invite_friends.html">好友邀请</a>
@@ -169,12 +177,25 @@
                             <div class="tab-pane fade in active" id="black-bill">
 
                                 <!--添加签名-->
-                                <div class="panel-group">
-                                    <h5>添加黑名单</h5>
-                                    <textarea id="sign" class="form-control" rows="5"></textarea> <br>
-                                    <p class="help-block">请把手机号码用逗号(,)隔开，如：18612345678,18612345679,18612345670</p>
-                                    <p><a href="#addSign" class="btn btn-primary btn-xs">保存</a></p>
-                                </div>
+                                <form class="form-horizontal" role="form">
+                                    <div class="form-group">
+                                        <div class="col-sm-2">
+                                            <label class=" control-label">添加黑名单</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+
+                                        <div class="col-sm-8">
+                                            <textarea id="sign" class="form-control" rows="5"></textarea> <br>
+                                            <p class="help-block">请把手机号码用逗号(,)隔开，如：18612345678,18612345679,18612345670</p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-2">
+                                            <p><a href="#addSign" class="btn btn-primary btn-xs">保存</a></p>
+                                        </div>
+                                    </div>
+                                </form>
 
                                 <!--datatables -->
                                 <!--datatables 列表名-->
@@ -194,9 +215,7 @@
                                             <!--</div>-->
                                             <!-- /.panel-heading -->
                                             <div class="panel-body">
-                                                <table width="100%"
-                                                       class="table table-striped table-bordered table-hover"
-                                                       id="dataTables-blackbill">
+                                                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-blackbill">
                                                     <thead>
                                                     <tr>
                                                         <th>Rendering engine</th>
