--- a/admin/sign.html
+++ b/admin/sign.html
@@ -183,26 +183,45 @@
                         </ul>
 
                         <!-- Tab panes -->
-                        <div class="tab-content small">
+                        <div class="tab-content small ">
                             <div class="tab-pane fade in active" id="sign-pills">
+                                <br>
                                 <!--添加签名-->
-                                <form class="form-horizontal" role="form">
-                                    <div class="form-group">
-                                        <div class="col-sm-2">
-                                            <label class="control-label">签名</label>
+                                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#signModal">添加签名</button>
+                                <!--添加签名 dalage-->
+                                <div class="modal   " id="signModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-content ">
+                                        <div class="modal-header">
+                                            <div class="text-center">添加新签名</div>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="tab-content">
+                                                <!--<form class="form-horizontal" role="form">-->
+                                                <!--<div class="form-group">-->
+                                                <!--<div class="col-sm-2">-->
+                                                <!--<label class="control-label">签名内容</label>-->
+                                                签名内容
+                                                <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="form-group">-->
+                                                <!--<div class="col-sm-10">-->
+                                                <textarea id="sign" class="form-control" rows="5"></textarea>
+                                                <!--</div>-->
+                                                <!--</div>-->
+                                                <!--<div class="form-group">-->
+                                                <!--<div class=" col-lg-offset-8">-->
+                                                <!--<p><a href="#addSign" class=" btn btn-primary btn-sm">保存</a></p>-->
+                                                <!--</div>-->
+                                                <!--</div>-->
+                                            </div>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <a href="#addSign" class=" btn btn-default btn-sm" data-dismiss="modal">取消</a>
+                                            <a href="#addSign" class=" btn btn-primary btn-sm" data-dismiss="modal">保存</a>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-10">
-                                            <textarea id="sign" class="form-control" rows="5"></textarea>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-8">
-                                            <p><a href="#addSign" class=" btn btn-primary btn-xs">保存</a></p>
-                                        </div>
-                                    </div>
-                                </form>
+                                </div>
                                 <!--datatables -->
                                 <!--datatables 列表名-->
                                 <div class="row">
@@ -228,67 +247,21 @@
                                                         <th>Browser</th>
                                                         <th>Platform(s)</th>
                                                         <th>Engine version</th>
-                                                        <th>CSS grade</th>
+                                                        <th>操作</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
 
-                                                    <tr class="gradeA">
-                                                        <td>Gecko</td>
-                                                        <td>Netscape 7.2</td>
-                                                        <td>Win 95+ / Mac OS 8.6-9.2</td>
-                                                        <td class="center">1.7</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Gecko</td>
-                                                        <td>Netscape Browser 8</td>
-                                                        <td>Win 98SE+</td>
-                                                        <td class="center">1.7</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
 
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 8.0</td>
-                                                        <td>Win 95+ / OSX.2+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 8.5</td>
-                                                        <td>Win 95+ / OSX.2+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.0</td>
-                                                        <td>Win 95+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.2</td>
-                                                        <td>Win 88+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.5</td>
-                                                        <td>Win 88+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
                                                     <tr class="gradeA">
                                                         <td>Presto</td>
                                                         <td>Opera for Wii</td>
                                                         <td>Wii</td>
                                                         <td class="center">-</td>
-                                                        <td class="center">A</td>
+                                                        <td class="center">
+                                                            <a href="#addSign" class=" btn btn-primary btn-xs" data-dismiss="modal">修改</a>
+                                                            <a href="#addSign" class=" btn btn-danger btn-xs" data-dismiss="modal">删除</a>
+                                                        </td>
                                                     </tr>
                                                     <tr class="gradeA">
                                                         <td>Presto</td>
@@ -367,7 +340,7 @@
                                                         <th>Browser</th>
                                                         <th>Platform(s)</th>
                                                         <th>Engine version</th>
-                                                        <th>CSS grade</th>
+                                                        <th>操作</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -377,7 +350,10 @@
                                                         <td>Netscape 7.2</td>
                                                         <td>Win 95+ / Mac OS 8.6-9.2</td>
                                                         <td class="center">1.7</td>
-                                                        <td class="center">A</td>
+                                                        <td class="center">
+                                                            <a href="#addSign" data-dismiss="modal">修改</a>|
+                                                            <a href="#addSign" data-dismiss="modal">删除</a>
+                                                        </td>
                                                     </tr>
                                                     <tr class="gradeA">
                                                         <td>Gecko</td>
@@ -387,63 +363,7 @@
                                                         <td class="center">A</td>
                                                     </tr>
 
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 8.0</td>
-                                                        <td>Win 95+ / OSX.2+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 8.5</td>
-                                                        <td>Win 95+ / OSX.2+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.0</td>
-                                                        <td>Win 95+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.2</td>
-                                                        <td>Win 88+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera 9.5</td>
-                                                        <td>Win 88+ / OSX.3+</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Opera for Wii</td>
-                                                        <td>Wii</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
-                                                    <tr class="gradeA">
-                                                        <td>Presto</td>
-                                                        <td>Nokia N800</td>
-                                                        <td>N800</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">A</td>
-                                                    </tr>
 
-                                                    <tr class="gradeU">
-                                                        <td>Other browsers</td>
-                                                        <td>All others</td>
-                                                        <td>-</td>
-                                                        <td class="center">-</td>
-                                                        <td class="center">U</td>
-                                                    </tr>
                                                     <tr class="gradeU">
                                                         <td>Other browsers</td>
                                                         <td>All others</td>
